--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "recoil": "^0.5.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "next-auth": "^4.1.2",
     "postcss": "^8.4.5",
+    "spotify-web-api-node": "^5.0.2",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
